Prettify the mobile header dropdown menu; alignment fixes in header; squish hamburger stack

--- a/ffcsa/static/css/style-source.css
+++ b/ffcsa/static/css/style-source.css
@@ -47,23 +47,50 @@
 2. Specialty
 ==================================== */
 
-/* For header "Member Sign In" text */
-a.text-brown-7:hover {
-    color: #28130b;
-}
+header > nav {
+    height: 67px;
+    }
 
-#header-dropdown-menu:not(.hidden) {
-    @apply flex flex-col justify-around absolute;
+    /* Header logo */
+    header > nav > a:first-of-type {
+        line-height: 67px;
+        }
 
-    height: 100px;
-    padding: 10px;
-    
-    right: 20px;
-    top: 80px;
+        header > nav > a:first-of-type img {
+            display: inline-block;
+            max-height: 67px;
+    }
 
-    background-color: white;    
-    box-shadow: #353535 2px 4px 7px;
-    border: black 1px solid;
+    /* For header "Member Sign In" text */
+    header a.text-brown-7:hover {
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -o-user-select: none;
+        user-select: none;
+        color: #28130b;
+    }
+
+    #header-dropdown-menu:not(.hidden) {
+        @apply flex flex-col justify-around absolute h-100px;
+
+        width: calc(100% - 14px);
+        right: 0px;
+        top: 107px;
+        margin: 0 7px;
+        padding: 10px 22px;
+
+        background-color: #fff;
+        border-top: 3px solid rgba(150, 150, 150, .15);
+
+        -moz-box-shadow: 0 2px 5px rgba(0, 0, 0, .1);
+        -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, .1);
+        box-shadow: 0 2px 5px rgba(0, 0, 0, .1);
+        }
+
+        #header-dropdown-menu li:first-of-type {
+            border-bottom: 1px solid rgba(100, 100, 100, .1);
+            padding-bottom: 8px;
 }
 
 /* Used for homepage cover image */
